--- a/_includes/products.html
+++ b/_includes/products.html
@@ -7,7 +7,7 @@
             <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/essd-dvr.jpg" alt="Hikvision eSSD DVR" width="100%" height="225">
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision eSSD DVR</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Thanks to Hikvision's embedded solid state drive technology, this energy-efficient eDVR Series lasts longer, is more durable and offers comparable or higher quality than traditional DVRs, making nearly every experience better. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/edvr-series" target="_blank">View</a>
@@ -18,15 +18,13 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/turbo-hd-dvr.webp" alt="Hikvision Turbo HD DVR" width="100%" height="225">
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision Turbo HD DVR</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">What' s more, all of Hikvision' s Turbo HD GT DVRs are now powered by Motion Detection 2.0, which detects human beings and vehicles through each analog channel to focus on real security threats. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/" target="_blank">View</a>
                 </div>
               </div>
             </div>
@@ -34,15 +32,13 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/hikvision-colorvu.jpg" alt="Hikvision ColorVu" width="100%" height="225">
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision ColorVu Camera</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Hikvision's ColorVu technology helps users protect people and property by capturing high-quality, full-color imaging 24/7 with the same sharp rendering at night time as in daylight. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/ColorVu-Series" target="_blank">View</a>
                 </div>
               </div>
             </div>
@@ -51,15 +47,14 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/web-cam.jpg" alt="Hikvision Web Camera" width="100%" height="225">
+            
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision Web Camera</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Today, remote meetings, distance learning, and distance working have become normal for people around the world. And to do this, we need the best and most advanced webcams. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/webcam-series/" target="_blank">View</a>
                 </div>
               </div>
             </div>
