--- a/_includes/products.html
+++ b/_includes/products.html
@@ -62,15 +62,13 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/turbo-hd-camera.webp" alt="Hikvision Web Camera" width="100%" height="225">
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision Turbo HD Camera</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Now Hikvision' s Turbo HD Cameras family welcomes two brand-new family members: Turbo HD GT PT Cameras and Smart Dual-light Cameras. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/" target="_blank">View</a>
                 </div>
               </div>
             </div>
@@ -78,15 +76,13 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/hikvision-alarm.png" alt="Hikvision Alarm" width="100%" height="225">
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision Alarm</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Alarm products are ideal solutions for many scenarios: residential areas, small businesses, campuses or open areas, etc. Hikvision offers a wide range of products that build reliable protection in every corners.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Alarm-Products/" target="_blank">View</a>
                 </div>
               </div>
             </div>
