--- a/_includes/products.html
+++ b/_includes/products.html
@@ -91,15 +91,13 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/hikvision-nvr.png" alt="Hikvision NVR, Network Video Recorders" width="100%" height="225">
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision NVR</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">With built-in analytics, Hikvision's Network Video Recorders (NVRs) provide advanced artificial intelligence capabilities for any connected data stream, even those from conventional security cameras.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Video-Recorders/" target="_blank">View</a>
                 </div>
               </div>
             </div>
