--- a/_includes/products.html
+++ b/_includes/products.html
@@ -105,15 +105,14 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/hikvision-intercom.jpg" alt="Hikvision Video Intercom" width="100%" height="225">
+            
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision Video Door Phone</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Hikvision's Video Intercom line offers a comprehensive range of products to enable more efficient and convenient two-way audio and video verification for entry control.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Video-Intercom-Products/" target="_blank">View</a>
                 </div>
               </div>
             </div>
@@ -121,14 +120,14 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/acusense.png" alt="Pro Series with AcuSense" width="100%" height="225">
+            
             <div class="card-body">
                 <h3 class="fw-light fs-2">Hikvision AcuSense DVR</h3>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Hikvision’s AcuSense technology embeds deep-learning algorithms into security cameras and video recorders to equip businesses and homeowners with smart tools to take security to the next level, both indoors and outdoors.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/AcuSense-Series/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/AcuSense-Series/" target="_blank">View</a>
                 </div>
               </div>
             </div>
