--- a/_includes/products.html
+++ b/_includes/products.html
@@ -10,7 +10,7 @@
               <p class="card-text">Thanks to Hikvision's embedded solid state drive technology, this energy-efficient eDVR Series lasts longer, is more durable and offers comparable or higher quality than traditional DVRs, making nearly every experience better. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/edvr-series" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/edvr-series" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -24,7 +24,7 @@
               <p class="card-text">What' s more, all of Hikvision' s Turbo HD GT DVRs are now powered by Motion Detection 2.0, which detects human beings and vehicles through each analog channel to focus on real security threats. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -38,7 +38,7 @@
               <p class="card-text">Hikvision's ColorVu technology helps users protect people and property by capturing high-quality, full-color imaging 24/7 with the same sharp rendering at night time as in daylight. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/ColorVu-Series" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/ColorVu-Series" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -54,7 +54,7 @@
               <p class="card-text">Today, remote meetings, distance learning, and distance working have become normal for people around the world. And to do this, we need the best and most advanced webcams. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/webcam-series/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/webcam-series/" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -68,7 +68,7 @@
               <p class="card-text">Now Hikvision' s Turbo HD Cameras family welcomes two brand-new family members: Turbo HD GT PT Cameras and Smart Dual-light Cameras. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/Turbo-HD-Cameras/" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -82,7 +82,7 @@
               <p class="card-text">Alarm products are ideal solutions for many scenarios: residential areas, small businesses, campuses or open areas, etc. Hikvision offers a wide range of products that build reliable protection in every corners.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Alarm-Products/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Alarm-Products/" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -97,7 +97,7 @@
               <p class="card-text">With built-in analytics, Hikvision's Network Video Recorders (NVRs) provide advanced artificial intelligence capabilities for any connected data stream, even those from conventional security cameras.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Video-Recorders/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Video-Recorders/" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -112,7 +112,7 @@
               <p class="card-text">Hikvision's Video Intercom line offers a comprehensive range of products to enable more efficient and convenient two-way audio and video verification for entry control.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Video-Intercom-Products/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Video-Intercom-Products/" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
@@ -127,7 +127,7 @@
               <p class="card-text">Hikvision’s AcuSense technology embeds deep-learning algorithms into security cameras and video recorders to equip businesses and homeowners with smart tools to take security to the next level, both indoors and outdoors.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/AcuSense-Series/" target="_blank">View</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/Turbo-HD-Products/DVR/AcuSense-Series/" target="_blank">View product page</a>
                 </div>
               </div>
             </div>
