--- a/_includes/products.html
+++ b/_includes/products.html
@@ -136,6 +136,21 @@
               </div>
             </div>
         </div>
+
+        <div class="col">
+            <div class="card shadow-sm">
+              <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/colorvu-ip.jpg" alt="Hikvision NVR, Network Video Recorders" width="100%" height="225">
+              <div class="card-body">
+                  <h3 class="fw-light fs-2">Hikvision ColorVu IP Camera</h3>
+                <p class="card-text">Security requirements and application settings vary. That's why Hikvision designs and tailors network cameras to meet various needs, from general video monitoring to video content analytics with deep learning algorithms and beyond.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Cameras/" target="_blank">View product page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
        
       </div>
     </div>
