--- a/_includes/products.html
+++ b/_includes/products.html
@@ -145,7 +145,7 @@
                 <p class="card-text">Security requirements and application settings vary. That's why Hikvision designs and tailors network cameras to meet various needs, from general video monitoring to video content analytics with deep learning algorithms and beyond.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Cameras/" target="_blank">View product page</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Cameras/colorvu-products" target="_blank">View product page</a>
                   </div>
                 </div>
               </div>
@@ -161,6 +161,21 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                       <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Cameras/acusense-products/" target="_blank">View product page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card shadow-sm">
+              <img class="rounded-lg-3 bd-placeholder-img card-img-top" src="/assets/images/hikvision-products/ip-camera.jpg" alt="Hikvision IP camera" width="100%" height="225">
+              <div class="card-body">
+                  <h3 class="fw-light fs-2">Hikvision IP Camera</h3>
+                <p class="card-text">Designed to meet the SMB users’ primary security needs and beyond, Hikvision’s Value Series Network Cameras provide reliable protection and smart functions at fairly reasonable prices.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://www.hikvision.com/en/products/IP-Products/Network-Cameras/value-series/" target="_blank">View product page</a>
                   </div>
                 </div>
               </div>
