--- a/_includes/products.html
+++ b/_includes/products.html
@@ -183,5 +183,6 @@
         </div>
        
       </div>
+      <p class="lead text-muted text-center">Hikivisin logo is the registered trademark of Hangzhou Hikvision Digital Technology Co., Ltd</p>
     </div>
   </div>
