--- a/_layouts/product-page.html
+++ b/_layouts/product-page.html
@@ -14,7 +14,8 @@ layout: default
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">If you want to get prices of hikvision CCTV camera or hikvision web camera or any other hikvision products please contact,</h1>
-        <p class="lead text-muted">You can buy Hikvision products in Galle.</p>
+        <p class="lead text-muted">Hikvision is the world's leading video surveillance brand manufacturer to date.
+          You can buy Hikvision products in Galle.</p>
         <p>
           <a href="tel:=+94769026918" class="btn btn-primary my-2">+94 76 902 6918</a>
         </p>
