--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="google-site-verification" content="246QM4Xki0jvdh3ANoDKXe-UOPQ23He8W83KY4P5ttA" />
-<meta name="description" content="US LAYER is providing IT services in Sri Lanka. CCTV, Software / Website development">
+<meta name="description" content="U.S LAYER specialize in developing POS Systems, CCTV Surveillance Systems, Payroll Systems, 
+Innovative Automation, Computer Networks & IT Services. Based on Galle Sri Lanka">
 <link rel="icon" href="{{ site.baseurl }}/{{site.favicon}}">
 
 <!-- <title>{{ page.title }} | {{site.title}}</title> -->
