--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,7 +55,9 @@
           <span class="fs-5">US LAYER</span>
         </a>
         <ul class="list-unstyled small text-muted">
-          <li class="mb-2">Hear as US LAYER our intention is to provide information(IT) services. So we mainly provide security, management and information services. Such as, <a href="#">Web developing and designing,</a> <a href="#">Software developing,</a> Networking, <a href="#">CCTV</a> and many more…</li>
+          <li class="mb-2">
+            At US LAYER, we specialize in providing top-notch IT services, including web development and design, software development, networking, and CCTV installation. Our focus is on delivering exceptional security, management, and information services to meet your needs. Contact us today to learn more about how we can help your business thrive in the digital age.
+          </li>
           <li class="border-top"></li>
           <li class="mb-2">US LAYER, Hapugala, Wakwella, Galle, Sri Lanka.</li>
           <li class="mb-2"><a href="tel:=+94769026918">+94 76 902 6918</a> (CCTV, Alarm | Home security)</li>
