--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,15 @@
 <meta name="google-site-verification" content="246QM4Xki0jvdh3ANoDKXe-UOPQ23He8W83KY4P5ttA" />
 <meta name="description" content="U.S LAYER specialize in developing POS Systems, CCTV Surveillance Systems, Payroll Systems, 
 Innovative Automation, Computer Networks & IT Services. Based on Galle Sri Lanka">
-<link rel="icon" href="{{ site.baseurl }}/{{site.favicon}}">
+<!-- <link rel="icon" href="{{ site.baseurl }}/{{site.favicon}}"> -->
+
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/images/fav/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/images/fav/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/images/fav/favicon-16x16.png">
+<link rel="manifest" href="{{ site.baseurl }}/assets/images/fav/site.webmanifest">
+<link rel="mask-icon" href="{{ site.baseurl }}/assets/images/fav/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 
 <!-- <title>{{ page.title }} | {{site.title}}</title> -->
 
