--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@ layout: default
 
     <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">{{ page.title }}</h1>
+        <!-- <h1 class="display-5 fw-bold">{{ page.title }}</h1> -->
         {{content}}
       </div>
     </div>
