--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,11 @@ Innovative Automation, Computer Networks & IT Services. Based on Galle Sri Lanka
 <!-- <title>{{ page.title }} | {{site.title}}</title> -->
 
 {% seo %}
+<script src="{{ site.baseurl }}/assets/js/color-modes.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-<link href="{{ site.baseurl }}/assets/css/bootstrap.min.css" rel="stylesheet">
+
+
 <link href="{{ site.baseurl }}/assets/css/btrap.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
@@ -43,15 +46,19 @@ gtag('config', '{{site.ganalytics}}');
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{ layout }}">
+{% include them_selection_svg.html %}
 
 <!-- Menu Navigation
 ================================================== -->
-{% include nav.html %}
+{% include nav_new.html %}
 
 
 <!-- Container
 ================================================== -->
 <main>
+      {% if page.url == "/" %}      
+            {% include master_head.html %}
+      {% endif %}
       {{ content }}
 </main>
 
