--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@ layout: default
 <div class="container py-4">
 
 
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 text-center bg-body-tertiary rounded-3">
       <div class="container-fluid py-5">
         <!-- <h1 class="display-5 fw-bold">{{ page.title }}</h1> -->
         {{content}}
