--- a/_includes/master_head.html
+++ b/_includes/master_head.html
@@ -1,7 +1,7 @@
 <div class="bd-masthead mb-3" id="content">
     <div class="container-xxl bd-gutter">
       <div class="col-md-8 mx-auto text-center">
-        <img src="/assets/images/uslayer_logo.svg" width="40%" alt="US LAYER logo" class="d-none d-sm-block mx-auto mb-3">
+        <a href=""><img src="/assets/images/uslayer_logo.svg" width="40%" alt="US LAYER logo" class="d-none d-sm-block mx-auto mb-3"></a>        
         <h1 class="mb-3 fw-semibold lh-1">Automation, Efficiency & Security Begin With Us</h1>
         <p class="lead mb-4">
             Technical support is essential for any individual or organization to carry out day-to-day work easily and quickly. 
